# vitabot-api-rust

./: Cargo.toml  README.md
src/: client.rs  constants.rs  lib.rs  main.rs  utils.rs
